--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="sweetalert2.min.css">
   <style>
     html, body{
       height: 100%;
@@ -49,8 +50,8 @@
 
             <h1 class="register">¡Por favor, regístrese!</h1>
             <div class="subSección">
-            <input id="correo" type="email" placeholder="Ingresar email" required autofocus=""><br>
-            <input id="contraseña" type="password"  placeholder="Ingresar contraseña" required> <br>
+            <input id="correo" type="email" placeholder="Ingresar el email" required autofocus=""><br>
+            <input id="contraseña" type="password"  placeholder="Ingresar la contraseña" required> <br>
             <label>
               <input type="checkbox"  value="Recuérdame" > Recuérdame
            </label> <br>
@@ -65,5 +66,6 @@
   
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
