--- a/product-info.html
+++ b/product-info.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
-
+  <script src="js/login.js"></script>
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -18,22 +18,143 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
+      <a class="py-2 d-none d-md-inline-block" href=" "></a>
       <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="entrada"></a>
-      <a href="#" onclick="signOut();">Cerrar Sesion</a>
+
+      <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block" href="my-profile.html"
+          id="entrada"></a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="my-profile.html">Mi perfil<i class="fas fa-street-view"></i></a>
+          <a class="dropdown-item" href="cart.html">Mi carrito<i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+          <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i class="fas fa-sign-out-alt"></i></a>
+        </div>
+      </div>
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0"
+        nonce="8wEHU41i"></script>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 19/09/2021) y Entrega 4 (Fecha de entrega: 03/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+  <main role="main">
+    <div class="container mt-5">
+      <div class="text-center p-4">
+        <h1>Descripción del Producto</h1>
+        <p class="lead">Encontrarás aquí toda la información sobre el vehículo.</p>
+        <p class="small alert-warning py-3"><strong>Nota: </strong>por simplicidad, cualquiera sea la categoría
+          seleccionada previamente, siempre se visualizará la presente: <strong>Autos</strong>.</p>
+      </div>
+
+      <h3 id="categoryName"></h3>
+      <hr class="my-3">
+      <dl>
+        <dt id="perro">Descripción</dt>
+        <dd>
+          <p id="categoryDescription"></p>
+        </dd>
+        <hr>
+
+        <dt>Categorías</dt>
+        <dd>
+          <p id="categoryCate"></p>
+        </dd>
+        <hr>
+
+        <dt>Precio</dt>
+        <dd>
+          <p id="productCount"></p>
+        </dd>
+        <hr>
+
+        <dt>Cantidad de vendidos</dt>
+        <dd>
+          <p id="productCriteria"></p>
+        </dd>
+        <hr>
+
+        <dt id="perro">Imágenes ilustrativas</dt>
+        <dd>
+          <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
+          </div>
+        </dd>
+        <hr>
+
+        <dt>Comentarios</dt>
+        <hr>
+
+        <br>
+        <div class="col-12"></div>
+        <div class="card">
+          <div class="card-body">
+            <h5>Comentar y calificar</h5>
+            <div>
+              <form>
+                <div class="form-group">
+                  <label>
+                    <textarea id="comment" rows="2" class="form-control" cols="100"></textarea>
+                  </label>
+                </div>
+                <span class="fa fa-star" style="cursor: pointer;" id="estrella1"></span>
+
+                <span class="fa fa-star" style="cursor: pointer;" id="estrella2"></span>
+
+                <span class="fa fa-star" style="cursor: pointer;" id="estrella3"></span>
+
+                <span class="fa fa-star" style="cursor: pointer;" id="estrella4"></span>
+
+                <span class="fa fa-star" style="cursor: pointer;" id="estrella5"></span>
+                <br>
+                <br>
+                <button class="btn btn-primary" type="submit">Comentar</button>
+              </form>
+            </div>
+
+
+          </div>
+        </div>
+
+        <dd>
+          <div id="datos"></div>
+        </dd>
+
+        <dt>Productos Relacionados</dt>
+        <dd>
+          <p id="relatedtCriteria"></p>
+        </dd>
+      </dl>
     </div>
+
+
+    <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
+  </main>
+  <div>
+  </div>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="img/prod1.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/prod2.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/prod3.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="img/prod4.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
   <footer class="text-muted">
     <div class="container">
@@ -43,21 +164,25 @@
       <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
+    <hr>
+    <div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
+      data-numposts="6">
+    </div>
   </footer>
   <div id="spinner-wrapper">
     <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
     </div>
   </div>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
-  <script src="js/login.js"></script>
   <script src="js/cerrar.js"></script>
+  <script src="js/product-info.js"></script>
 </body>
+<script>
+
+
+</script>
 
 </html>
