--- a/JapFase1/guardar.html
+++ b/JapFase1/guardar.html
@@ -1,4 +1,55 @@
-<!--<header class="container-fluid bg-dark position-sticky top-0"></header>
+<!DOCTYPE html>
+<!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
+<html lang="en">
+
+<head>
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <title>eMercado - Todo lo que busques está aquí</title>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/dropzone.css" rel="stylesheet">
+</head>
+
+<body>
+    <nav class="site-header sticky-top py-1 bg-dark">
+        <script async defer crossorigin="anonymous"
+            src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0" nonce="8wEHU41i"></script>
+        <div class="container d-flex flex-column flex-md-row justify-content-between">
+            <a class="py-2 d-none d-md-inline-block" href="#"></a>
+            <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
+            <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
+            <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
+            <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+
+            <!--Menú despegable con Boostrap-->
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle prueba" role="button" id="entrada" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false" class="py-2 d-none d-md-inline-block"
+                    href="my-profile.html" id="entrada"></a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="my-profile.html">Mi perfil<i class="fas fa-street-view"></i></a>
+                    <a class="dropdown-item" href="#" onclick="signOut();">Cerrar sesión<i
+                            class="fas fa-sign-out-alt"></i></a>
+                </div>
+            </div>
+            <div id="icon-menu">
+                <a class="dropdown-item" href="home.html"><i class="fas fa-bars"></i></a>
+            </div>
+        </div>
+    </nav>
+    <br>
+    <br>
+
+<header class="container-fluid bg-dark position-sticky top-0"></header>
 
 <ul class="nav nav-pills mb-3 py-3  container" id="pills-tab" role="tablist">
 
@@ -12,7 +63,7 @@
     </li>
 </ul>
 
-<Alerta para añadir Prod. al carrito--
+<!--Alerta para añadir Prod. al carrito-->
 <div class="alert container position-sticky top-0 alert-primary  hide" role="alert">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi flex-shrink-0 me-2"
         viewBox="0 0 16 16" role="img" aria-label="Success:">
@@ -51,7 +102,7 @@
             <div class="col d-flex justify-content-center mb-4">
                 <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
                     <h5 class="card-title pt-2 text-center text-primary">Pino de olor para el auto</h5>
-                    <img src="/img/tree1.jpg" class="card-img-top" alt="#" width="100%">
+                    <img src="/img/prod1_2.jpg" class="card-img-top" alt="#" width="100%">
                     <div class="card-body ">
                         <p class="card-text text-white-50 description">"El modelo de auto que se sigue renovando y
                             manteniendo su
@@ -142,7 +193,7 @@
                 </tr>
             </thead>
 
-            <La class "tbody" la voy a obtener como variable global en el JavaScrip (en líne 9)--
+            <!--La class "tbody" la voy a obtener como variable global en el JavaScrip (en líne 9)-->
             <tbody class="tbody">
 
             </tbody>
@@ -158,4 +209,42 @@
         </div>
 
     </div>
-</div>-->
+</div>
+<footer class="bg-dark p-3 mt-5">
+    <p class="text-center mg-o text-muted"> eMercado - Todo lo que busques está aquí </p>
+</footer>
+
+<div class="container p-5">
+    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
+        <h4 class="alert-heading">¡A trabajar! :)</h4>
+        <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega:
+            14/11/2021).</p>
+        <hr>
+        <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.
+        </p>
+    </div>
+</div>
+<div id="spinner-wrapper">
+    <div class="lds-ring">
+
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</div>
+
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    crossorigin="anonymous"></script>
+<script src="js/login.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/dropzone.js"></script>
+<script src="js/init.js"></script>
+<script src="js/guardar.js"></script>
+<script src="js/cerrar.js"></script>
+</body>
+</html>
