--- a/JapFase1/product-info.html
+++ b/JapFase1/product-info.html
@@ -149,9 +149,9 @@
           href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
     <hr>
-    <div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
+    <!--<div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
       data-numposts="6">
-    </div>
+    </div>-->
   </footer>
   <div id="spinner-wrapper">
     <div class="lds-ring">
