--- a/JapFase1/products.html
+++ b/JapFase1/products.html
@@ -105,11 +105,12 @@
           <p class="float-right">
             <a href="#">Volver arriba</a>
           </p>
-          <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
-          <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
-          <div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
-            data-numposts="6">
+          <p class="text-center">Este sitio forma parte de Desarrollo Web - JAP - 2020. Clickea <a target="_blank"
+              href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
           </div>
+          <!--<div class="fb-comments" data-href="https://github.com/AlvaroDiploide/proyecto-E-M" data-width="800"
+            data-numposts="6">
+          </div>-->
         </div>
       </footer>
       <div id="spinner-wrapper">
